# logscale-scim

./: .flaskenv  .gitignore  .releaserc.json  Dockerfile  README.md  app.py  logscale.graphql  pyproject.toml
.github/workflows/: ci-main.yaml
logscalescim/: __init__.py  app.py  config.py  graphql_client.py  initsroles.py  response_utils.py  utils.py
logscalescim/logscalescim/: __init__.py  app.py  config.py  graphql_client.py
logscalescim/logscalescim/routes/: __init__.py  auth.py  groups.py  users.py
logscalescim/routes/: __init__.py  auth.py  groups.py  resource_types.py  schemas.py  service_provider_config.py  users.py
tests/: conftest.py  test_scim.py
