[tool.poetry]
name = "logscale-scim"
version = "0.1.0"
description = ""
authors = ["Ryan Faircloth <ryan@dss-i.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.5"
PyJWT = "^2.6.0"
Werkzeug = "^2.2.2"
gql = {version = "^3.4.0", extras = ["requests"]}
opentelemetry-api = "^1.15.0"
opentelemetry-sdk = "^1.15.0"
opentelemetry-instrumentation-flask = "^0.36b0"
opentelemetry-instrumentation-requests = "^0.36b0"
opentelemetry-instrumentation-logging = "^0.36b0"
opentelemetry-exporter-otlp = "^1.15.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
